@@ -1,3 +1,7 @@
+2004-09-16  MenTaLguY <mental@rydia.net>
+
+	* src/render/stroke.cpp: a little more work on the stroking code
+
 2004-09-15  Carl Hetherington <inkscape@carlh.net>
 
 	* src/display/canvas-bpath.cpp, src/display/nr-arena-shape.cpp
